--- a/MailbagSeriesFabs/GraphUsersInBlazorWasm/Shared/NavMenu.razor
+++ b/MailbagSeriesFabs/GraphUsersInBlazorWasm/Shared/NavMenu.razor
@@ -8,6 +8,16 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="gettoponeuser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Get Top Graph User
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="getallusers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Get All Graph Users
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
